# dlarm

./: Cargo.toml  README.md  makefile  script_for_color.sh  script_without_color.sh
src/: clap_config.rs  cli.rs  data_file.rs  error_types.rs  main.rs  man  man.rs  settings.rs
